refactor: 반환을 불변으로 설정